--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,9 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: python:3.9-slim
+
     steps:
-      # Define the steps for the build job here
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
 
       - name: Install dependencies
@@ -24,7 +25,10 @@ jobs:
           pip install -r requirements.txt
         # Installs the Python dependencies defined in requirements.txt
 
-      - name: Run tests
+      - name: Lint with flake8
         run: |
-          python -m unittest discover -s tests
-        # Runs unit tests
+          flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 src --count --max-complexity=10 --max-line-length=127 --statistics
+
+      - name: Run unit tests with nose
+        run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=src
